--- a/Project/force-app/main/default/classes/AccountDeletionHandler.cls
+++ b/Project/force-app/main/default/classes/AccountDeletionHandler.cls
@@ -8,7 +8,7 @@ public static void contactDelete(List<Account> oldList){
     for(Account a:oldList){
         if(mapAcc.get(a.Id).Contacts.size()>2){
             a.addError('can not be delete the account');
-            
+            //test comment
         }
     }
 }
